@@ -102,7 +102,6 @@
 #define ACE_HAS_GETRUSAGE 1
 #define ACE_HAS_GETRUSAGE_PROTOTYPE 1
 #define ACE_HAS_NEW_NO_H 1
-#define ACE_HAS_WCHAR 1
 #define ACE_HAS_XPG4_MULTIBYTE_CHAR 1
 #define ACE_IOCTL_TYPE_ARG2 u_long
 #define ACE_HAS_TIMEZONE 1
@@ -112,7 +111,6 @@
 #define ACE_HAS_STANDARD_CPP_LIBRARY 1
 #define ACE_HAS_STRING_CLASS 1
 #define ACE_HAS_STRSIGNAL
-#define ACE_HAS_POLL 1
 #define ACE_HAS_POSITION_INDEPENDENT_POINTERS 1
 #define ACE_HAS_POSIX_NONBLOCK 1
 #define ACE_HAS_RECURSIVE_THR_EXIT_SEMANTICS 1
@@ -151,6 +149,9 @@
 # define ACE_LACKS_ALPHASORT
 # define ACE_LACKS_STRPTIME
 # define ACE_LACKS_POLL_H
+#else
+# define ACE_HAS_POLL 1
+# define ACE_HAS_WCHAR 1
 #endif
 
 #define ACE_LACKS_ISCTYPE
